--- a/mods/just-enough-resources-jer.pw.toml
+++ b/mods/just-enough-resources-jer.pw.toml
@@ -1,6 +1,6 @@
 name = "Just Enough Resources (JER)"
 filename = "JustEnoughResources-Fabric-1.20.1-1.4.0.247.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/uEfK2CXF/versions/9HWvOVzO/JustEnoughResources-Fabric-1.20.1-1.4.0.247.jar"
