--- a/mods/justenoughbreeding.pw.toml
+++ b/mods/justenoughbreeding.pw.toml
@@ -1,6 +1,6 @@
 name = "Just Enough Breeding (JEBr)"
 filename = "justenoughbreeding-fabric-1.20.x-1.2.1.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/9Pk89J3g/versions/JXF6mh90/justenoughbreeding-fabric-1.20.x-1.2.1.jar"
