--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,8 +28,8 @@ jobs:
               run: |
                   mkdir distrib
                   cd distrib
-                  curl -L --output install.jar  "https://github.com/packwiz/packwiz-installer-bootstrap/releases/download/v0.0.3/packwiz-installer-bootstrap.jar"
-                  java -jar install.jar --no-gui ../pack.toml
+                  curl -L --output packwiz-installer-bootstrap.jar  "https://github.com/packwiz/packwiz-installer-bootstrap/releases/download/v0.0.3/packwiz-installer-bootstrap.jar"
+                  java -jar packwiz-installer-bootstrap.jar --no-gui ../pack.toml
                   zip -r ${{ env.MODPACK_NAME }}-${{ github.ref_name }}.zip *
 
             - name: Release with Notes
