--- a/mods/yacl.pw.toml
+++ b/mods/yacl.pw.toml
@@ -1,6 +1,6 @@
 name = "YetAnotherConfigLib"
 filename = "YetAnotherConfigLib-3.4.4+1.20.1-fabric.jar"
-side = "client"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/RXrT2ogA/YetAnotherConfigLib-3.4.4%2B1.20.1-fabric.jar"
